@@ -13,16 +13,23 @@ class Muri
       def photobucket_fetch
         if self.photobucket_media?
           api_url = "http://api.photobucket.com/media/#{CGI::escape(media_api_id)}"
-          doc = Nokogiri::XML(open(Muri::Fetcher::Photobucket.media_api_request(api_url)))
-          
-          self.media_title          = doc.search("title").inner_text
-          self.media_description    = doc.search("description").inner_text
-          self.media_keywords       = doc.search("tag").collect{ |t| t["tag"] }
-          self.media_thumbnail      = doc.search("thumb").inner_text
-          self.media_posted         = Time.at(doc.search('media').first["uploaddate"].to_i)
-        end
-      end
 
+          url = Muri::Fetcher::Photobucket.media_api_request(api_url)
+          doc = Muri::fetch_xml(url)
+
+          self.media_title            = REXML::XPath.first(doc, '//title').text
+          self.media_description      = REXML::XPath.first(doc, '//description').text
+          self.media_keywords         = REXML::XPath.each(doc, '//tag').collect{ |t| t.attributes["tag"] }
+          self.media_thumbnail        = REXML::XPath.each(doc, '//thumb').text
+          self.media_posted           = Time.at(REXML::XPath.first(doc, '//media').attributes["uploaddate"].to_i)
+          true
+        else
+          false
+        end
+      rescue
+        false        
+      end
+      
       def self.media_api_request(api_call)
         params = {"format" => "xml",
                   "oauth_consumer_key" => MuriOptions[:photobucket][:api_key],
@@ -37,7 +44,16 @@ class Muri
         signature_hash = CGI::escape(Base64.encode64(digest).chomp)
         
         "#{api_call}?#{param_string}&oauth_signature=#{signature_hash}"
-      end      
+      end
+      
+      #def photobucket_nokogiri
+        #doc = Nokogiri::XML(open(Muri::Fetcher::Photobucket.media_api_request(api_url)))
+        #self.media_title          = doc.search("title").inner_text
+        #self.media_description    = doc.search("description").inner_text
+        #self.media_keywords       = doc.search("tag").collect{ |t| t["tag"] }
+        #self.media_thumbnail      = doc.search("thumb").inner_text
+        #self.media_posted         = Time.at(doc.search('media').first["uploaddate"].to_i)
+      #end
     end
   end
 end
