@@ -23,26 +23,6 @@ class Muri
       def flickr_parse
         self.media_service      = FLICKR_SERVICE_NAME #'Flickr'
 
-<<<<<<< HEAD:lib/muri/filters/flickr.rb
-        if self.uri.path =~ REGEX_FLICKR_PHOTO_OR_SET
-          media_creator         = $1
-          self.media_id         = $3
-          self.media_api_type   = $2.nil? ? FLICKR_PHOTO : FLICKR_SET
-          
-        elsif (self.uri.host + self.uri.path) =~ REGEX_FLICKR_STATIC_PHOTO
-          farm                  = $1
-          server_id             = $2
-          self.media_id         = $3
-          self.media_api_type   = FLICKR_PHOTO
-          media_secret          = $4
-          url_prefix            = "http://farm#{farm}.static.flickr.com/#{server_id}/#{self.media_id}_#{media_secret}"
-          self.media_url        = "#{url_prefix}.jpg"
-          self.media_thumbnail  = "#{url_prefix}_t.jpg"
-          
-        elsif (self.uri.host + self.uri.path) =~ REGEX_FLICKR_SHORTURL
-          self.media_id         = Filter::Flickr.decode58($1)
-          self.media_api_type   = FLICKR_PHOTO
-=======
         if self.uri.path =~ REGEX_FLICKR_MEDIA_OR_SET
           media_creator = $1
           self.media_id = $3
@@ -59,21 +39,14 @@ class Muri
         elsif (self.uri.host + self.uri.path) =~ REGEX_FLICKR_SHORTURL
           self.media_id = Filter::Flickr.decode58($1)
           self.media_api_type = FLICKR_MEDIA
->>>>>>> testing:lib/muri/filters/flickr.rb
         else
           raise UnsupportedURI
         end
 
-<<<<<<< HEAD:lib/muri/filters/flickr.rb
-        self.media_api_id       = self.media_id
-        
-        if self.flickr_photo?
-          self.media_website    = "http://flic.kr/p/" + Filter::Flickr.encode58(self.media_id.to_i)
-=======
+
         self.media_api_id = self.media_id
         if self.flickr_media?
           self.media_website = "http://flic.kr/p/" + Filter::Flickr.encode58(self.media_id.to_i)
->>>>>>> testing:lib/muri/filters/flickr.rb
         elsif self.flickr_set?
           self.media_website    = "http://www.flickr.com/photos/#{media_creator}/sets/#{self.media_id}" # appending /show takes direct to image through redirect
         end
