@@ -10,6 +10,7 @@ Gem::Specification.new do |s|
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["William Schneider"]
   s.date = %q{2010-04-16}
+  s.default_executable = %q{murify}
   s.description = %q{Automatically get media information from the URL.}
   s.email = %q{bananastalktome@gmail.com}
   s.executables = ["murify"]
@@ -25,6 +26,7 @@ Gem::Specification.new do |s|
      "bin/murify",
      "lib/muri.rb",
      "lib/muri/base.rb",
+     "lib/muri/fetcher.rb",
      "lib/muri/fetchers/flickr.rb",
      "lib/muri/fetchers/photobucket.rb",
      "lib/muri/fetchers/picasa.rb",
@@ -72,12 +74,9 @@ Gem::Specification.new do |s|
     s.specification_version = 3
 
     if Gem::Version.new(Gem::RubyGemsVersion) >= Gem::Version.new('1.2.0') then
-      s.add_runtime_dependency(%q<nokogiri>, [">= 0"])
     else
-      s.add_dependency(%q<nokogiri>, [">= 0"])
     end
   else
-    s.add_dependency(%q<nokogiri>, [">= 0"])
   end
 end
 
